--- a/hanoi.css
+++ b/hanoi.css
@@ -7,8 +7,8 @@
 }
 
 .tower {
-	position: relative;
 	width: 33.33333333%;
+	min-height: 300px;
 	height: 300px;
 	vertical-align: bottom !important;
 	padding: 10px 10px 0 10px !important;
@@ -33,13 +33,17 @@
 }
 
 .block-wrapper{
+	position: relative;
+}
 
+.block-wrapper td{
+	vertical-align: bottom !important;
 }
 
 .block{
 	height: 100%;
 	display: block;
-	border: 1px solid;
+	/*border: 1px solid;*/
 	cursor: pointer;
 	background-color: red;
 	z-index: 100;
@@ -47,6 +51,7 @@
 	border-radius: 5px;
 	margin: 1px auto;
 	box-shadow: 6px 2px 6px #111;
+	position: relative;
 }
 
 .controls{
@@ -58,4 +63,14 @@
 .victory{
 	text-align: center;
 	display: none;
+}
+.ui-sortable-helper{
+	height: 0;
+}
+.ui-sortable-placeholder{
+	/*height: 0;*/
+}
+.repaint{
+	display: none;
+	position: static;
 }
